# baml-playground

./: .gitignore  README.md  project.md  pyproject.toml
baml_src/: clients.baml  generators.baml  main.baml  types.baml
src/amzn_cost/: __init__.py  cli.py  parser.py  scraper.py
tests/: test_extract_product.py
