[tool.poetry]
name = "amzn-cost"
version = "0.1.0"
description = "CLI tool to fetch Amazon product prices and descriptions using BAML"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "amzn_cost", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
baml-py = "^0.211.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.1"
ruff = "^0.1.9"

[tool.poetry.scripts]
amzn-cost = "amzn_cost.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "auto"
